fix: map visible on full image view in slider

--- a/react-estate-ui/src/routes/singlePage/singlePage.scss
+++ b/react-estate-ui/src/routes/singlePage/singlePage.scss
@@ -181,6 +181,7 @@
             .mapContainer{
                 width: 100%;
                 height: 200px;
+                z-index: 0;
             }
             .buttons{
                 display: flex;
